Working on first phase of the game